@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2004/10/03 00:12:57 tv Exp $
+# $NetBSD: Makefile,v 1.15 2005/01/12 15:32:01 jlam Exp $
 #
 
 DISTNAME=	slatec_src
@@ -18,7 +18,7 @@ COMMENT=	Library of mathematical and statistical Fortran 77 subroutines
 
 WRKSRC=			${WRKDIR}/src
 USE_BUILDLINK3=		YES
-USE_FORTRAN=		YES
+USE_LANGUAGES=		fortran
 USE_LIBTOOL=		YES
 
 post-extract:
